--- a/index.html
+++ b/index.html
@@ -1,9 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Universal Links</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Timesheet Calculator</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .container {
+            max-width: 500px;
+            margin: 50px auto;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px 30px;
+        }
+        h2 {
+            text-align: center;
+            color: #4CAF50;
+            margin-bottom: 20px;
+        }
+        label {
+            font-size: 1rem;
+            margin-top: 10px;
+            display: block;
+            font-weight: bold;
+        }
+        input, select, button {
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+        input:focus, select:focus, button:focus {
+            border-color: #4CAF50;
+            outline: none;
+            box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        .output {
+            margin-top: 20px;
+            padding: 15px;
+            background: #f1f1f1;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1.1rem;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Universal Links are configured!</h1>
+    <div class="container">
+        <h2>Timesheet Calculator</h2>
+        <label for="effectiveHours">Effective Hours (e.g., 4h 10m):</label>
+        <input type="text" id="effectiveHours" placeholder="4h 10m">
+
+        <label for="lastPunch">Last Punch-in Time (e.g., 3:27 PM):</label>
+        <input type="time" id="lastPunch">
+
+        <label for="targetHours">Target Hours:</label>
+        <select id="targetHours">
+            <option value="8:00">8 hours</option>
+            <option value="8:24">8:24 hours</option>
+            <option value="8:30">8:30 hours</option>
+            <option value="6:30">6:30 hours</option>
+        </select>
+
+        <button onclick="calculateCompletionTime()">Calculate Completion Time</button>
+
+        <div class="output" id="output"></div>
+    </div>
+
+    <script>
+        function calculateCompletionTime() {
+            const effectiveHoursInput = document.getElementById("effectiveHours").value;
+            const lastPunchInput = document.getElementById("lastPunch").value;
+            const targetHoursInput = document.getElementById("targetHours").value;
+            const outputDiv = document.getElementById("output");
+
+            if (!effectiveHoursInput || !lastPunchInput) {
+                outputDiv.innerHTML = "Please enter all required fields.";
+                return;
+            }
+
+            // Parse effective hours (e.g., "4h 10m")
+            const match = effectiveHoursInput.match(/(\d+)h\s*(\d+)?m?/);
+            if (!match) {
+                outputDiv.innerHTML = "Invalid effective hours format. Use '4h 10m'.";
+                return;
+            }
+
+            const effectiveHours = parseInt(match[1], 10) || 0;
+            const effectiveMinutes = parseInt(match[2], 10) || 0;
+
+            // Parse last punch-in time
+            const [lastPunchHours, lastPunchMinutes] = lastPunchInput.split(":").map(Number);
+
+            // Parse target hours
+            const [targetHours, targetMinutes] = targetHoursInput.split(":").map(Number);
+
+            // Calculate total effective time in minutes
+            const totalEffectiveMinutes = effectiveHours * 60 + effectiveMinutes;
+
+            // Calculate target time in minutes
+            const targetTotalMinutes = targetHours * 60 + targetMinutes;
+
+            // Calculate remaining time to complete target
+            const remainingMinutes = targetTotalMinutes - totalEffectiveMinutes;
+
+            if (remainingMinutes <= 0) {
+                outputDiv.innerHTML = "Target already completed.";
+                return;
+            }
+
+            // Calculate completion time
+            const completionMinutes = lastPunchMinutes + remainingMinutes;
+            let completionHours = lastPunchHours + Math.floor(completionMinutes / 60);
+            const finalMinutes = completionMinutes % 60;
+
+            // Convert to 12-hour format
+            const isPM = completionHours >= 12;
+            completionHours = completionHours % 12 || 12;
+
+            const period = isPM ? "PM" : "AM";
+            const completionTime = `${String(completionHours).padStart(2, "0")}:${String(finalMinutes).padStart(2, "0")} ${period}`;
+
+            outputDiv.innerHTML = `<strong>Completion Time:</strong> ${completionTime}`;
+        }
+    </script>
 </body>
 </html>
