--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -142,5 +142,17 @@
             outputDiv.innerHTML = `<strong>Completion Time:</strong> ${completionTime}`;
         }
     </script>
+</body>
+</html>
+ -->
+
+
+ <!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
 </body>
 </html>
